<resources>
    <string name="app_name">HttpLogLib</string>
    <string name="floating">拖动</string>
    <string name="start">启动悬浮窗口</string>
    <string name="stop">移除悬浮窗口</string>
    <string name="chuck_name">Chuck</string>
    <string name="chuck_notification_title">Recording HTTP activity</string>
    <string name="chuck_clear">Clear</string>
    <string name="chuck_browse_sql_database">Browse SQLite database</string>
    <string name="chuck_overview">Overview</string>
    <string name="chuck_request">Request</string>
    <string name="chuck_response">Response</string>
    <string name="chuck_url">URL</string>
    <string name="chuck_method">Method</string>
    <string name="chuck_protocol">Protocol</string>
    <string name="chuck_status">Status</string>
    <string name="chuck_ssl">SSL</string>
    <string name="chuck_request_time">Request time</string>
    <string name="chuck_response_time">Response time</string>
    <string name="chuck_duration">Duration</string>
    <string name="chuck_request_size">Request size</string>
    <string name="chuck_response_size">Response size</string>
    <string name="chuck_total_size">Total size</string>
    <string name="chuck_yes">Yes</string>
    <string name="chuck_no">No</string>
    <string name="chuck_share">Share</string>
    <string name="chuck_share_as_text">Share as text</string>
    <string name="chuck_share_as_curl">Share as curl command</string>
    <string name="chuck_body_omitted">(encoded or binary body omitted)</string>
    <string name="chuck_search">Search</string>
    <string name="chuck_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="chuck_body_content_truncated">\n\n--- Content truncated ---</string>
</resources>
