<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/bt_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="拷贝返回结果" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_url" />

                    <TextView
                        android:id="@+id/url"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_method" />

                    <TextView
                        android:id="@+id/method"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="GET" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_protocol" />

                    <TextView
                        android:id="@+id/protocol"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="HTTP/1.1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_status" />

                    <TextView
                        android:id="@+id/status"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Complete" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_response" />

                    <TextView
                        android:id="@+id/response"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="200 OK" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_ssl" />

                    <TextView
                        android:id="@+id/ssl"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Yes" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_request_time" />

                    <TextView
                        android:id="@+id/request_time"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="05/02/17 11:52:49" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_response_time" />

                    <TextView
                        android:id="@+id/response_time"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="05/02/17 11:52:49" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_duration" />

                    <TextView
                        android:id="@+id/duration"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="405 ms" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_request_size" />

                    <TextView
                        android:id="@+id/request_size"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="53 KB" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_response_size" />

                    <TextView
                        android:id="@+id/response_size"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="148 KB" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Chuck.TextAppearance.Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chuck_total_size" />

                    <TextView
                        android:id="@+id/total_size"
                        style="@style/Chuck.TextAppearance.Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="201 KB" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/request_headers"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorWhite"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/request_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/response_headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/reponse_body"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textIsSelectable="true" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/bt_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="关闭" />
</LinearLayout>